--- a/gitlab/deployment.yml
+++ b/gitlab/deployment.yml
@@ -42,16 +42,66 @@ data:
     gitlab_rails['redis_host'] = 'redis-svc'
     gitlab_rails['redis_port'] = '6379'
     # Registry
-    registry['enable'] = true
+    gitlab_rails['registry_enabled'] = true
+    gitlab_rails['registry_api_url'] = "http://docker-registry-svc:5000"
+    gitlab_rails['registry_issuer'] = "gitlab-issuer"
+    # Нужен ключь в правильном формате
+    gitlab_rails['internal_key'] = "/gitlab-reg-auth/auth.key"
+    # gitlab_rails['registry_key_path'] = "/gitlab-reg-auth/auth.key"
     registry_external_url 'https://reg.dev-srv.home.lan'
     registry_nginx['listen_port'] = 5005
     registry_nginx['listen_https'] = false
-    # registry_nginx['redirect_http_to_https'] = true
+    registry['http_secret'] = "your-http-secret"
     registry_nginx['proxy_set_headers'] = {
+      "X-Real-IP" => "$remote_addr",
+      "X-Forwarded-For" => "$proxy_add_x_forwarded_for",
       'X-Forwarded-Proto' => 'https',
       'X-Forwarded-Ssl' => 'on'
     }
 ---
+
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: gitlab-reg-auth-vol
+#   namespace: gitlab
+#   labels:
+#     type: local
+#     app: gitlab
+#     tiers: registry
+# spec:
+#   capacity:
+#     storage: 1Gi
+#   accessModes:
+#     #- ReadOnlyMany
+#     - ReadWriteMany
+#   volumeMode: Filesystem
+#   persistentVolumeReclaimPolicy: Delete
+#   storageClassName: gitlab-reg-auth #Задаем имя класса хранилища
+#   hostPath:
+#     path: "/srv/gitlab"
+# ---
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: gitlab-reg-auth-claim
+#   namespace: gitlab
+#   labels:
+#     app: gitlab
+# spec:
+#   accessModes:
+#     - ReadWriteMany
+#   volumeMode: Filesystem
+#   resources:
+#     requests:
+#       storage: 512Mi
+#   selector:
+#     matchLabels:
+#       app: gitlab
+#       tiers: registry
+#   storageClassName: gitlab-reg-auth
+
+# ---
 apiVersion: v1
 kind: Service
 metadata:
@@ -131,22 +181,27 @@ spec:
               containerPort: 32222
             - name: http-reg
               containerPort: 5005
-          resources:
-            limits:
-              memory: 3000Mi
-              cpu: 1200m
-            requests:
-              memory: 2000Mi
-              cpu: 1000m
+          # resources:
+          #   limits:
+          #     memory: 3000Mi
+          #     cpu: 1200m
+          #   requests:
+          #     memory: 2500Mi
+          #     cpu: 1100m
           volumeMounts:
+            # - name: gitlab-reg-auth
+            #   mountPath: /gitlab-reg-auth
             - mountPath: /certs
               name: auth-cert
             - mountPath: /reg-auth-cert
               name: reg-cert
       volumes:
+        # - name: gitlab-reg-auth
+        #   persistentVolumeClaim:
+        #     claimName: gitlab-reg-auth-claim
         - name: auth-cert
           secret:
             secretName: root-secret
         - name: reg-cert
           secret:
-            secretName: registry-auth-cert
+            secretName: gitlab-reg-auth
