--- a/runner/deployment.yml
+++ b/runner/deployment.yml
@@ -34,6 +34,13 @@ spec:
         #   periodSeconds: 10
         #   successThreshold: 1
         #   timeoutSeconds: 1
+        resources:
+          limits:
+            memory: 500Mi
+            cpu: 600m
+          requests:
+            memory: 500Mi
+            cpu: 600m
         env:
         - name: CI_SERVER_URL
           value: "http://gitlab-svc/ci"
