--- a/registry/deployment.yaml
+++ b/registry/deployment.yaml
@@ -86,103 +86,15 @@ spec:
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
         volumeMounts:
-        # - name: gitlab-reg-auth
-        #   mountPath: /gitlab-reg-auth
-        # - mountPath: /var/lib/registry/
-        #   name: data
-        # - mountPath: /certs
-        #   name: auth-cert
+        - mountPath: /var/lib/registry/
+          name: data
         - mountPath: /reg-auth-cert
           name: reg-cert
       volumes:
-      # - name: gitlab-reg-auth
-      #   persistentVolumeClaim:
-      #     claimName: gitlab-reg-auth-readonly-claim
-      # - name: auth-cert
-      #   secret:
-      #     secretName: root-secret
       - name: reg-cert
         secret:
           secretName: gitlab-reg-auth
-  # volumeClaimTemplates:
-  # - metadata:
-  #     name: data
-  #   spec:
-  #     accessModes: [ "ReadWriteOnce" ]
-  #     storageClassName: "local-path"
-  #     resources:
-  #       requests:
-  #         storage: 20Gi
-# ---
-# apiVersion: v1
-# kind: PersistentVolume
-# metadata:
-#   name: gitlab-reg-auth-vol
-#   namespace: gitlab
-#   labels:
-#     type: local
-# spec:
-#   capacity:
-#     storage: 20Mi
-#   accessModes:
-#     #- ReadOnlyMany
-#     - ReadWriteOnce
-#   # persistentVolumeReclaimPolicy: Delete
-#   storageClassName: gitlab-reg-auth #Задаем имя класса хранилища
-#   hostPath:
-#     path: "/srv/gitlab"
-# ---
-# apiVersion: v1
-# kind: PersistentVolumeClaim
-# metadata:
-#   name: gitlab-reg-auth-claim
-#   namespace: gitlab
-#   labels:
-#     app: gitlab
-# spec:
-#   accessModes:
-#     - ReadWriteOnce
-#   resources:
-#     requests:
-#       storage: 10Mi
-#   storageClassName: gitlab-reg-auth
----
-apiVersion: v1
-kind: Service
-metadata:
-  labels:
-    app: docker-registry
-  name: docker-registry-svc
-  namespace: gitlab
-spec:
-  #externalTrafficPolicy: Cluster
-  ports:
-  - name: registry
-    #nodePort: 31500
-    port: 5000
-    protocol: TCP
-    targetPort: 5000
-  selector:
-    app: docker-registry
-  sessionAffinity: None
-  #type: NodePort
-  type: ClusterIP
----
-# apiVersion: v1
-# kind: PersistentVolumeClaim
-# metadata:
-#   name: gitlab-reg-auth-readonly-claim
-#   namespace: gitlab
-#   labels:
-#     app: gitlab
-# spec:
-#   accessModes:
-#     - ReadWriteMany
-#   resources:
-#     requests:
-#       storage: 512Mi
-#   selector:
-#     matchLabels:
-#       app: gitlab
-#       tiers: registry
-#   # storageClassName: gitlab-reg-auth
+      - name: data
+        persistentVolumeClaim:
+          claimName: registry-data-pvc
+
