--- a/redis/deployment.yml
+++ b/redis/deployment.yml
@@ -1,52 +1,3 @@
-# apiVersion: v1
-# kind: PersistentVolume
-# metadata:
-#   name: redis-data-vol
-#   namespace: gitlab
-#   labels:
-#     type: local
-# spec:
-#   capacity:
-#     storage: 10Gi
-#   accessModes:
-#     #- ReadOnlyMany
-#     - ReadWriteOnce
-#   # persistentVolumeReclaimPolicy: Delete
-#   storageClassName: redis-data #Задаем имя класса хранилища
-#   hostPath:
-#     path: "/srv/gitlab-redis"
-# ---
-# apiVersion: v1
-# kind: PersistentVolumeClaim
-# metadata:
-#   name: redis-claim
-#   namespace: gitlab
-#   labels:
-#     app: redis
-# spec:
-#   accessModes:
-#     - ReadWriteOnce
-#   resources:
-#     requests:
-#       storage: 5Gi
-#   storageClassName: redis-data
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: redis-svc
-  namespace: gitlab
-  labels:
-    app: gitlab
-spec:
-  ports:
-    - name: redis
-      protocol: "TCP"
-      port: 6379
-      targetPort: 6379
-  selector:
-    app: redis
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -71,13 +22,13 @@ spec:
           ports:
             - containerPort: 6379
               name: redis
-          resources:
-            limits:
-              memory: 512Mi
-              cpu: 500m
-            requests:
-              memory: 256Mi
-              cpu: 200m
+          # resources:
+          #   limits:
+          #     memory: 512Mi
+          #     cpu: 500m
+          #   requests:
+          #     memory: 256Mi
+          #     cpu: 200m
           volumeMounts:
             - name: redis
               mountPath: /var/lib/redis
