--- a/redis/deployment.yml
+++ b/redis/deployment.yml
@@ -16,19 +16,27 @@ spec:
       labels:
         app: redis
     spec:
+      securityContext:
+        runAsUser: 65534
+        runAsGroup: 65534
+        fsGroup: 65534
       containers:
         - image: redis:6.2-rc3-alpine
           name: redis
           ports:
             - containerPort: 6379
               name: redis
-          # resources:
-          #   limits:
-          #     memory: 512Mi
-          #     cpu: 500m
-          #   requests:
-          #     memory: 256Mi
-          #     cpu: 200m
+          securityContext:
+            capabilities:
+              add: 
+                - SYS_ADMIN
+          resources:
+            limits:
+              memory: 512Mi
+              cpu: 500m
+            requests:
+              memory: 256Mi
+              cpu: 200m
           volumeMounts:
             - name: redis
               mountPath: /var/lib/redis
