--- a/registry/deployment.yaml
+++ b/registry/deployment.yaml
@@ -14,10 +14,10 @@ spec:
       labels:
         app: docker-registry
     spec:
-      securityContext:
-        runAsUser: 65534
-        runAsGroup: 65534
-        fsGroup: 65534
+      # securityContext:
+      #   runAsUser: 65534
+      #   runAsGroup: 65534
+      #   fsGroup: 65534
       terminationGracePeriodSeconds: 30
       containers:
       - name: docker-registry
