--- a/gitlab/deployment.yml
+++ b/gitlab/deployment.yml
@@ -15,10 +15,10 @@ spec:
         app: gitlab # has to match .spec.selector.matchLabels
     spec:
       terminationGracePeriodSeconds: 10
-      securityContext:
-        # runAsUser: 1000
-        # runAsGroup: 1000
-        fsGroup: 1000
+      # securityContext:
+      #   runAsUser: 1000
+      #   runAsGroup: 3000
+      #   fsGroup: 2000
       containers:
         - name: gitlab
           image: gitlab/gitlab-ce:14.4.2-ce.0
