--- a/gitlab/pv.yml
+++ b/gitlab/pv.yml
@@ -40,14 +40,11 @@ spec:
     - ReadWriteMany
   storageClassName: gitlab-etc-storage
   nfs:
-    server: dev-srv
+    server: 10.43.232.3
     path: "/gitlab/gitlab_etc"
   mountOptions:
     - nfsvers=4.2
-    - hard
-    - rsize=1048576
-    - wsize=1048576
-    - noatime
+    - port=2049
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -61,14 +58,11 @@ spec:
     - ReadWriteMany
   storageClassName: gitlab-git-data-storage
   nfs:
-    server: dev-srv
+    server: 10.43.232.3
     path: "/gitlab/gitlab_git_data"
   mountOptions:
     - nfsvers=4.2
-    - hard
-    - rsize=1048576
-    - wsize=1048576
-    - noatime
+    - port=2049
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -82,14 +76,11 @@ spec:
     - ReadWriteMany
   storageClassName: gitlab-uploads-data-storage
   nfs:
-    server: dev-srv
+    server: 10.43.232.3
     path: "/gitlab/gitlab_uploads_data"
   mountOptions:
     - nfsvers=4.2
-    - hard
-    - rsize=1048576
-    - wsize=1048576
-    - noatime
+    - port=2049
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -103,14 +94,11 @@ spec:
     - ReadWriteMany
   storageClassName: gitlab-shared-data-storage
   nfs:
-    server: dev-srv
+    server: 10.43.232.3
     path: "/gitlab/gitlab_shared_data"
   mountOptions:
     - nfsvers=4.2
-    - hard
-    - rsize=1048576
-    - wsize=1048576
-    - noatime
+    - port=2049
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -124,11 +112,9 @@ spec:
     - ReadWriteMany
   storageClassName: gitlab-builds-data-storage
   nfs:
-    server: dev-srv
+    server: 10.43.232.3
     path: "/gitlab/gitlab_builds_data"
   mountOptions:
     - nfsvers=4.2
-    - hard
-    - rsize=1048576
-    - wsize=1048576
-    - noatime
+    - port=2049
+
