--- a/redis/deployment.yml
+++ b/redis/deployment.yml
@@ -13,6 +13,8 @@ spec:
     type: Recreate
   template:
     metadata:
+      annotations:
+        container.apparmor.security.beta.kubernetes.io/redis: localhost/nfs-mount-container
       labels:
         app: redis
     spec:
