--- a/registry/pv.yml
+++ b/registry/pv.yml
@@ -40,7 +40,7 @@ spec:
     - ReadWriteMany
   storageClassName: registry-data-storage
   nfs:
-    server: dev-srv
+    server: 10.43.232.3
     path: "/gitlab/registry_data"
   mountOptions:
-    - nfsvers=4.2
+    - nfsvers=4
