--- a/postgres/pv.yml
+++ b/postgres/pv.yml
@@ -37,10 +37,10 @@ spec:
   capacity:
     storage: 5Gi
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   storageClassName: postgres-data-storage
   nfs:
-    server: 10.43.232.3
+    server: 10.43.85.189
     path: "/gitlab/postgres_data"
   mountOptions:
     - nfsvers=4
