--- a/registry/deployment.yaml
+++ b/registry/deployment.yaml
@@ -11,8 +11,8 @@ spec:
   replicas: 1
   template:
     metadata:
-      annotations:
-        container.apparmor.security.beta.kubernetes.io/docker-registry: localhost/nfs-mount-container
+      # annotations:
+      #   container.apparmor.security.beta.kubernetes.io/docker-registry: localhost/nfs-mount-container
       labels:
         app: docker-registry
     spec:
