--- a/registry/deployment.yaml
+++ b/registry/deployment.yaml
@@ -36,7 +36,7 @@ spec:
         - name: REGISTRY_AUTH
           value: "token"
         - name: REGISTRY_AUTH_TOKEN_REALM
-          value: "https://gitlab.dev-srv.home.lan/jwt/auth"
+          value: "http://gitlab-svc/jwt/auth"
         - name: REGISTRY_AUTH_TOKEN_SERVICE
           value: "container_registry"
         - name: REGISTRY_AUTH_TOKEN_ISSUER
