--- a/gitlab/omnibus-conf.yml
+++ b/gitlab/omnibus-conf.yml
@@ -18,11 +18,11 @@ data:
     redis['enable'] = false
     
     # Base
-    external_url "http://gitlab.dev-srv.home.lan"
+    external_url "https://gitlab.dev-srv.home.lan"
     nginx['enable'] = true
     nginx['listen_port'] = 80
     nginx['listen_https'] = false
-    nginx['redirect_http_to_https'] = false
+    # nginx['redirect_http_to_https'] = false
     # nginx['proxy_set_headers'] = {
     #   "X-Forwarded-Proto" => "http",
     #   "CUSTOM_HEADER" => "VALUE"
@@ -70,25 +70,25 @@ data:
     gitlab_rails['registry_issuer'] = "gitlab-issuer"
     registry['internal_key'] = File.read("/reg-auth-cert/reg-auth.key")
 
-    registry_external_url 'http://reg.dev-srv.home.lan'
+    registry_external_url 'https://reg.dev-srv.home.lan'
     registry_nginx['listen_port'] = 5005
     registry_nginx['listen_https'] = false
     # registry_nginx['redirect_http_to_https'] = false
-    # registry_nginx['proxy_set_headers'] = {
-    #   'X-Forwarded-Proto' => 'https',
-    #   'X-Forwarded-Ssl' => 'on'
-    # }
+    registry_nginx['proxy_set_headers'] = {
+      'X-Forwarded-Proto' => 'https',
+      'X-Forwarded-Ssl' => 'on'
+    }
     # registry_nginx['proxy_set_headers'] = {
     #   "X-Forwarded-Proto" => "http",
     #   "CUSTOM_HEADER" => "VALUE"
     # }
-    registry_nginx['proxy_set_headers'] = { 
-      "Host" => "$http_host", 
-      "X-Real-IP" => "$remote_addr", 
-      "X-Forwarded-For" => "$proxy_add_x_forwarded_for", 
-      "X-Forwarded-Proto" => "https", 
-      "X-Forwarded-Ssl" => "on"
-      }
+    # registry_nginx['proxy_set_headers'] = { 
+    #   "Host" => "$http_host", 
+    #   "X-Real-IP" => "$remote_addr", 
+    #   "X-Forwarded-For" => "$proxy_add_x_forwarded_for", 
+    #   "X-Forwarded-Proto" => "https", 
+    #   "X-Forwarded-Ssl" => "on"
+    #   }
     # registry['notifications'] = [
     #   {
     #     'name' => 'registry_endpoint',
