--- a/registry/svc.yml
+++ b/registry/svc.yml
@@ -1,20 +1,17 @@
+---
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: docker-registry
   name: docker-registry-svc
   namespace: gitlab
+  labels:
+    app: docker-registry
 spec:
-  #externalTrafficPolicy: Cluster
-  ports:
-  - name: registry
-    #nodePort: 31500
-    port: 5000
-    protocol: TCP
-    targetPort: 5000
   selector:
     app: docker-registry
-  sessionAffinity: None
-  #type: NodePort
+  ports:
+    - name: http-web
+      protocol: "TCP"
+      port: 5000
+      targetPort: 5000
   type: ClusterIP
