--- a/registry/deployment.yaml
+++ b/registry/deployment.yaml
@@ -68,11 +68,11 @@ spec:
         # - name: REGISTRY_REDIS_PASSWORD
         #   value: redispass
         # NOTIFICATIONS
-        # - name: REGISTRY_NOTIFICATIONS_ENDPOINTS
-        #   valueFrom:
-        #     configMapKeyRef:
-        #       name: registry-notify
-        #       key: registry_notifications
+        - name: REGISTRY_NOTIFICATIONS_ENDPOINTS
+          valueFrom:
+            configMapKeyRef:
+              name: registry-notify
+              key: registry_notifications
         ports:
           - containerPort: 5000
             protocol: TCP
